day-16/netpol.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: giropops
---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: giropops
  labels:
    app: redis
spec:
  containers:
    - image: redis:alpine
      name: redis
      ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: giropops
  labels:
    app: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: giropops
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: giropops
spec:
  selector:
    app: nginx
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-access-redis
  # namespace: giropops
spec:
  podSelector: # the pods which the netpol will be applied
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from: # which pods can access the redis pods
        - podSelector:
            matchLabels:
              app: nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-from-giropo-ns
  namespace: giropops
spec:
  podSelector: {} # valid for all the pods inside the namespace
  policyTypes:
    - Ingress
  ingress:
    - from: # only pods in the giropops namespace
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: giropops
